# cd-player

./: README.md  configure.ac
include/: Makefile.am  player.h  player_types.h
include/impl/basic/: basic_player.h
include/state/: player_state.h
include/state/impl/idle/: idle_player_state.h
include/state/impl/pause/: pause_player_state.h
include/state/impl/play/: play_player_state.h
src/: Makefile.am
src/impl/basic/: basic_player.c
src/state/impl/idle/: idle_player_state.c
src/state/impl/pause/: pause_player_state.c
src/state/impl/play/: play_player_state.c
test/: Makefile  main.c
