AUTOMAKE_OPTIONS = subdir-objects

# Header files to be installed
include_HEADERS = \
    @srcdir@/impl/basic/basic_player.h \
    @srcdir@/player_types.h \
    @srcdir@/player.h

# Header files not to be installed
noinst_HEADERS = \
    @srcdir@/state/impl/idle/idle_player_state.h \
    @srcdir@/state/impl/pause/pause_player_state.h \
    @srcdir@/state/impl/play/play_player_state.h \
    @srcdir@/state/player_state.h
